--- a/SmartThings/App.xaml
+++ b/SmartThings/App.xaml
@@ -2,6 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:SmartThings"
+             xmlns:converters="clr-namespace:SmartThings.Converters"
              x:Class="SmartThings.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -9,6 +10,10 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary>
+                <converters:BoolToTextConverter x:Key="BoolToTextConverter"/>
+                <converters:BoolToColorConverter x:Key="BoolToColorConverter"/>
+            </ResourceDictionary>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
