--- a/SmartThings/AppShell.xaml
+++ b/SmartThings/AppShell.xaml
@@ -4,12 +4,18 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:SmartThings"
+    
     Shell.FlyoutBehavior="Flyout"
-    Title="SmartThings">
+    Title="SmartThings"
+    Shell.BackgroundColor="#7593af"
+    Shell.TitleColor="#f0ead2"
+    Shell.ForegroundColor="#f0ead2">
+
 
     <ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
+    
 
 </Shell>
