--- a/SmartThings/App.xaml
+++ b/SmartThings/App.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:SmartThings"
              xmlns:converters="clr-namespace:SmartThings.Converters"
-             x:Class="SmartThings.App">
+             x:Class="SmartThings.App"
+             x:ClassModifier="public">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
